12/18/16

Added all files

--------

12/18/16

Updated OldSourceCode\dlls with working compile ready source code

Added changelog.txt

--------

12/19/16

Added 4 missing files to the sourcecode\cl_dll\client\client.dsw
sourcecode\cl_dll\hl\hl_baseentity.cpp
sourcecode\cl_dll\hl\hl_events.cpp
sourcecode\cl_dll\hl\hl_objects.cpp
sourcecode\cl_dll\hl\hl_weapons.cpp
All compiled fine without modification, but you have to copy the "sourcecode\common" folder to the directory underneath WCE Dreamcast SDK include directory (C:\WCEDreamcast\common)


--------

12/20/16

Added commdlg.h to En4CEr\inc. Only takes care of one error. Compiler complains about a missing header in an #if statement, might not be needed